k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tyershop-api
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tyershop-api
  template:
    metadata:
      labels:
        app: tyershop-api
    spec:
      containers:
        - name: api
          image: ghcr.io/justgu1/tyershop-api:latest
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: tyershop-api
  namespace: apps
spec:
  selector:
    app: tyershop-api
  ports:
    - name: http
      port: 3000
      targetPort: http
