k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tyershop-tls
  namespace: apps
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hg.tyershop.com`)
      kind: Rule
      services:
        - name: tyershop-frontend
          port: 80
    - match: Host(`medusa.hg.tyershop.com`)
      kind: Rule
      services:
        - name: tyershop-backend
          port: 9000
    - match: Host(`api.hg.tyershop.com`)
      kind: Rule
      services:
        - name: tyershop-api
          port: 3000
  tls:
    certResolver: letsencrypt
